--- a/src/scss/components/_blog-card.scss
+++ b/src/scss/components/_blog-card.scss
@@ -1,19 +1,19 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 .blog-card {
-  @include spruce.layout-stack(xxs);
+  @include layout-stack(xxs);
 
   &__title {
-    font-family: spruce.$font-family-base;
+    font-family: config('font-family-base', $typography);
   }
 
   &__link {
-    color: spruce.color(text);
+    color: color(text);
     text-decoration: none;
 
     &:hover,
     &:focus {
-      color: spruce.color(text);
+      color: color(text);
     }
   }
 
@@ -21,7 +21,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    font-family: spruce.$font-family-heading;
-    gap: spruce.spacer(m);
+    font-family: config('font-family-heading', $typography);
+    gap: spacer('m');
   }
 }
