--- a/src/scss/components/_info-card.scss
+++ b/src/scss/components/_info-card.scss
@@ -1,9 +1,9 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 .info-card {
-  @include spruce.layout-stack(xxs);
+  @include layout-stack(xxs);
 
   &__title {
-    font-size: spruce.$font-size-base;
+    font-size: config('font-size-base', $typography);
   }
 }
