--- a/src/scss/components/_prism.scss
+++ b/src/scss/components/_prism.scss
@@ -1,10 +1,10 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 code[class*='language-'],
 pre[class*='language-'] {
-  color: spruce.color(color, prism);
+  color: color(color, prism);
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: spruce.$font-size-base;
+  font-size: config('font-size-base', $typography);
   hyphens: none;
   line-height: 1.5;
   tab-size: 4;
@@ -26,7 +26,7 @@ pre[class*='language-'] {
 pre[class*='language-'] {
   display: grid;
   overflow: auto;
-  padding: spruce.spacer(m);
+  padding: spacer('m');
 }
 
 pre[class*='language-'] code {
@@ -36,27 +36,27 @@ pre[class*='language-'] code {
 
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
-  background: spruce.color(background, prism);
+  background: color(background, prism);
   overflow-x: auto;
 }
 
 .token.comment,
 .token.prolog,
 .token.cdata {
-  color: spruce.color(comment, prism);
+  color: color(comment, prism);
   font-style: italic;
 }
 
 .token.punctuation {
-  color: spruce.color(punctuation, prism);
+  color: color(punctuation, prism);
 }
 
 .namespace {
-  color: spruce.color(namespace, prism);
+  color: color(namespace, prism);
 }
 
 .token.deleted {
-  color: spruce.color(deleted, prism);
+  color: color(deleted, prism);
   font-style: italic;
 }
 
@@ -64,19 +64,19 @@ pre[class*='language-'] {
 .token.operator,
 .token.keyword,
 .token.property {
-  color: spruce.color(namespace, prism);
+  color: color(namespace, prism);
 }
 
 .token.tag {
-  color: spruce.color(punctuation, prism);
+  color: color(punctuation, prism);
 }
 
 .token.boolean {
-  color: spruce.color(boolean, prism);
+  color: color(boolean, prism);
 }
 
 .token.number {
-  color: spruce.color(number, prism);
+  color: color(number, prism);
 }
 
 .token.constant,
@@ -87,31 +87,31 @@ pre[class*='language-'] {
 .language-css .token.string,
 .style .token.string,
 .token.char {
-  color: spruce.color(constant, prism);
+  color: color(constant, prism);
 }
 
 .token.selector,
 .token.function,
 .token.doctype {
-  color: spruce.color(punctuation, prism);
+  color: color(punctuation, prism);
   font-style: italic;
 }
 
 .token.attr-name,
 .token.inserted {
-  color: spruce.color(constant, prism);
+  color: color(constant, prism);
   font-style: italic;
 }
 
 .token.class-name,
 .token.atrule {
-  color: spruce.color(class-name, prism);
+  color: color(class-name, prism);
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-  color: spruce.color(regex, prism);
+  color: color(regex, prism);
 }
 
 .token.important,
