--- a/src/scss/layout/_post.scss
+++ b/src/scss/layout/_post.scss
@@ -1,21 +1,21 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 .l-post {
   margin-inline: auto;
 
   &__title {
-    font-family: spruce.$font-family-base;
-    font-size: spruce.responsive-font-size(4.25rem, 40, '5vw');
-    line-height: spruce.$line-height-sm;
-    margin-block: spruce.spacer-clamp(m, l) spruce.spacer(m);
+    font-family: config('font-family-base', $typography);
+    font-size: responsive-font-size(4.25rem, 40, '5vw');
+    line-height: config('line-height-sm', $typography);
+    margin-block: spacer-clamp('m', 'l') spacer('m');
   }
 
   &__meta {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    font-family: spruce.$font-family-heading;
-    gap: spruce.spacer(m);
-    margin-block-end: spruce.spacer(m);
+    font-family: config('font-family-heading', $typography);
+    gap: spacer('m');
+    margin-block-end: spacer('m');
   }
 }
