--- a/src/scss/extend/_form.scss
+++ b/src/scss/extend/_form.scss
@@ -1,14 +1,14 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 .form-group-list {
-  @include spruce.layout-stack(s);
+  @include layout-stack('s');
 }
 
 .form-group--btns {
   align-items: center;
   display: flex;
   flex-direction: row;
-  gap: spruce.spacer(s);
+  gap: spacer('s');
 
   &-space-between {
     justify-content: space-between;
