--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -21,7 +21,7 @@
     width: 100%;
 
     @include breakpoint('sm') {
-      --spacer: #{spacer(xxl)};
+      --spacer: #{spacer('xxl')};
     }
   }
 }
