--- a/src/scss/components/_accordion-list.scss
+++ b/src/scss/components/_accordion-list.scss
@@ -1,7 +1,7 @@
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
 .accordion-list {
   > * + * {
-    border-block-start: 1px solid spruce.color(border);
+    border-block-start: 1px solid color('border');
   }
 }
