--- a/src/scss/components/_info-card.scss
+++ b/src/scss/components/_info-card.scss
@@ -1,7 +1,7 @@
 @use 'sprucecss/scss/spruce' as *;
 
 .info-card {
-  @include layout-stack(xxs);
+  @include layout-stack('xxs');
 
   &__title {
     font-size: config('font-size-base', $typography);
