--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -30,7 +30,7 @@
 
     &[aria-current='page'],
     &:hover {
-      background-color: color(text);
+      background-color: color('text');
       color: hsl(0 0% 100%);
       text-decoration: none;
     }
